Adding license to makefile

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,7 +14,7 @@
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 # General Public License for more details.
 
-EXTRA_DIST = README.md Configuration
+EXTRA_DIST = README.md LICENSE Configuration
 
 ACLOCAL_AMFLAGS = -I m4
 AM_CPPFLAGS = -I $(top_srcdir)/src
