removing falcodiff from autotools until it is implemented

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,18 +21,12 @@ AM_CPPFLAGS = -I $(top_srcdir)/src
 
 CXXFLAGS = -O3 # default has optimization on
 
-bin_PROGRAMS = falco falcodiff
+bin_PROGRAMS = falco
 
 falco_CXXFLAGS = $(OPENMP_CXXFLAGS) $(AM_CXXFLAGS)
 falco_CPPFLAGS = -DPROGRAM_PATH=\"$(abspath $(top_srcdir))\"
 if ENABLE_HTS
 falco_CPPFLAGS += -DUSE_HTS
-endif
-
-falcodiff_CXXFLAGS = $(OPENMP_CXXFLAGS) $(AM_CXXFLAGS)
-falcodiff_CPPFLAGS = -DPROGRAM_PATH=\"$(abspath $(top_srcdir))\"
-if ENABLE_HTS
-falcodiff_CPPFLAGS += -DUSE_HTS
 endif
 
 falco_SOURCES = \
@@ -52,14 +46,3 @@ falco_SOURCES = \
 	src/OptionParser.hpp \
 	src/smithlab_utils.hpp \
 	src/aux.hpp
-
-falcodiff_SOURCES = \
-  src/falcodiff.cpp \
-	src/OptionParser.cpp \
-	src/FalcoConfig.cpp \
-	src/smithlab_utils.cpp \
-	src/Module.cpp \
-  src/OptionParser.hpp \
-	src/FalcoConfig.hpp \
-	src/smithlab_utils.hpp \
-	src/Module.hpp
