.github/workflows/ubuntu-distcheck.yml: adding back the --enable-hts argument when configuring falco

--- a/.github/workflows/ubuntu-distcheck.yml
+++ b/.github/workflows/ubuntu-distcheck.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Generate configure script
       run: ./autogen.sh
     - name: configure
-      run: ./configure
+      run: ./configure --enable-hts
     - name: Build falco
       run: make
     - name: Check the distribution
