--- a/configure.ac
+++ b/configure.ac
@@ -24,6 +24,13 @@ AM_INIT_AUTOMAKE([subdir-objects foreign])
 AC_CONFIG_MACRO_DIR([m4])
 AC_LANG(C++)
 AC_PROG_CXX
+
+# Set CXXFLAGS only if the user hasn't set them
+AS_IF([test "x$CXXFLAGS_set" != "xset"], [
+  CXXFLAGS="-O3 -DNDEBUG"
+])
+AC_MSG_NOTICE([CXXFLAGS is $CXXFLAGS])
+
 AX_CXX_COMPILE_STDCXX_17([noext], [mandatory])
 AC_OPENMP([C++]) dnl make sure we have openmp for multi-core in falco
 
